<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.speechpeach.arestmanager.ui.fragments.arests.CreateArestFragment">

    <data>
        <import type="android.text.InputType" />
        <variable
            name="status"
            type="String" />
        <variable
            name="viewmodel"
            type="com.speechpeach.arestmanager.viewmodels.arests.CreateArestViewModel" />
        <variable
            name="fragment"
            type="com.speechpeach.arestmanager.ui.fragments.arests.CreateArestFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:padding="20dp">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_type"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/spinner"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dateField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/registration_arest_date"
                    app:errorEnabled="true"
                    app:expandedHintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/spinner_type">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dateTextField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="@{InputType.TYPE_NULL}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/numberField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/registration_arest_number"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:errorEnabled="true"
                    app:expandedHintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/dateField">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/numberTextField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯабвгдеёжзийклмнопрстуфхцчшщъыьэюяABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789#№-"
                        android:maxLength="30" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/baseField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/base"
                    app:counterEnabled="true"
                    app:counterMaxLength="1000"
                    app:errorEnabled="true"
                    app:expandedHintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/numberField">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/baseTextField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="1000" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sumField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/sum"
                    app:errorEnabled="true"
                    app:expandedHintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/baseField">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sumTextField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/statusField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:enabled="false"
                    android:hint="@string/arest_status"
                    app:expandedHintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/sumField">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/statusTextField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{status}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passportField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:enabled="false"
                    android:hint="@string/arest_status"
                    app:expandedHintEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/statusField">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passportTextField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewmodel.formattedPassport}" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/view_offset"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toBottomOf="@id/passportField" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="@{() -> fragment.onSubmit()}"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>